misitioba-003-display-repo-link

--- a/src/ba/static/our-technology-stack/index.our-technology-stack.html
+++ b/src/ba/static/our-technology-stack/index.our-technology-stack.html
@@ -32,8 +32,10 @@
             <br>&nbsp;&nbsp;&nbsp; Backend automatic tasks workflow
             <br>&nbsp;&nbsp;&nbsp; Backend Shell, File and Database Logging tool with different verbosity levels
             <br>&nbsp;&nbsp;&nbsp; Backend developement autoreload (Nodemon)
-            <br>&nbsp;&nbsp;&nbsp; And more...
+            <br>&nbsp;&nbsp;&nbsp; and ...
             
+            <br>
+            <br>&nbsp;&nbsp;&nbsp; we love open source ! <a href="https://github.com/javimosch/bastack" target="_blank">https://github.com/javimosch/bastack</a>
             
         </p>
     </div>
