ba-xxx-overall-improvements

--- a/src/ba/static/index.homepage.html
+++ b/src/ba/static/index.homepage.html
@@ -1,24 +1,31 @@
 {{> top}}
 <div class="row">
     <div class="col-lg-12">
-        <img class="big-centered-logo center-block" src="/img/logo.white.jpg" />
+
+        <!--
         <p class="centered-title">
             Personal brand for freelance software development
         </p>
+        -->
         <ul class="home-menu">
             <li class="home-menu__item">
-                <p><a href="/about-javier-arancibia-and-misitioba">About Javier Arancibia / MisitioBA</a></p>
+                <a href="/" class="header__brand">
+                    <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
+                </a>
             </li>
             <li class="home-menu__item">
-                <p><a href="/services">Services we provide
-</a></p>
+                <p><a href="/about-javier-arancibia-and-misitioba">About JA</a></p>
             </li>
             <li class="home-menu__item">
-                <p><a href="/our-technology-stack">Technology stack</a></p>
+                <p><a href="/services">Services</a></p>
             </li>
             <li class="home-menu__item">
-                <p><a href="/online-projects">Online projects</a></p>
+                <p><a href="/online-projects">Projects</a></p>
             </li>
+            <li class="home-menu__item">
+                <p><a href="/our-technology-stack">Technology</a></p>
+            </li>
+
             <!--
             <li class="home-menu__item">
                 <p><a href="#">Gallery</a></p>
