--- a/src/ba/static/online-projects/index.online-projects.html
+++ b/src/ba/static/online-projects/index.online-projects.html
@@ -1,25 +1,27 @@
 {{> top}}
 <div class="row">
     <div class="col-lg-12">
-        <img class="big-centered-logo center-block" src="/img/logo.white.jpg" />
-
+        <a href="/" class="header__brand visible-xs-block visible-sm-block">
+            <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
+        </a>
         <h1 class="centered-title">Online projects, production projects, portfolio, work</h1>
 
-        <h2 class="left-subtitle">Diagnostical.fr</h2>
-        <p class="paragraph">
-            Diagnostical is a reservation platform for real estate diagnostics already implemented in many departments (50 independent diagnosticians in metropolitan France). Founded by a diagnostician and a web entrepreneur, this startup tends to literally revolutionize
-            the profession of real estate diagnoser by a very simple process, that of digitization and uberization.
-            <br>If you are a Diagnoser: Offer your expertise on Diagnostic, and you will gain new customers quickly, regularly and free of charge.<br> If you are the owner: You can access the certified diagnostic schedules available in your department
-            and at the right price
-        </p>
-        <p class="paragraph-layout">
-            <a href="https://www.linkedin.com/company/10985007?trk=vsrp_companies_cluster_name&trkInfo=VSRPsearchId%3A1095097121486391558940%2CVSRPtargetId%3A10985007%2CVSRPcmpt%3Acompanies_cluster" target="_blank">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;Linkedin page
-            </a>
-            <a href="https://www.diagnostical.fr" target="_blank">
-                <i class="fa fa-home" aria-hidden="true"></i>&nbsp;Diagnostical homepage
-            </a>
-        </p>
+        <div class="panel">
+            <h2 class="left-subtitle">Diagnostical.fr</h2>
+            <p class="paragraph">
+                Diagnostical is a home inspection booking platform, already implemented in many departments (50 independent certified inspectors in metropolitan France). Founded by an inspector and a web entrepreneur, this startup tends to literally revolutionize the
+                profession of home inspector by a very simple process : digitization and uberization. If you are a home inspector: Offer your expertise on Diagnostical, and you will gain new customers quickly, regularly and free of charge. If you are
+                the owner: You can access the certified inspecor schedules available in your department and at the right price
+            </p>
+            <p class="paragraph-layout">
+                <a href="https://www.linkedin.com/company/10985007?trk=vsrp_companies_cluster_name&trkInfo=VSRPsearchId%3A1095097121486391558940%2CVSRPtargetId%3A10985007%2CVSRPcmpt%3Acompanies_cluster" target="_blank">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;Linkedin page
+                </a>
+                <a href="https://www.diagnostical.fr" target="_blank">
+                    <i class="fa fa-home" aria-hidden="true"></i>&nbsp;Diagnostical homepage
+                </a>
+            </p>
+        </div>
     </div>
 
 </div>
