--- a/src/ba/static/services/index.services.html
+++ b/src/ba/static/services/index.services.html
@@ -1,7 +1,9 @@
 {{> top}}
 <div class="row">
     <div class="col-lg-12">
-        <img class="big-centered-logo center-block" src="/img/logo.white.jpg" />
+        <a href="/" class="header__brand visible-xs-block visible-sm-block">
+        <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
+        </a>
         <p class="centered-title">
             Full stack javascript engineering
         </p>
