--- a/src/ba/static/services/index.services.html
+++ b/src/ba/static/services/index.services.html
@@ -2,32 +2,46 @@
 <div class="row">
     <div class="col-lg-12">
         <a href="/" class="header__brand visible-xs-block visible-sm-block">
-        <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
+            <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
         </a>
         <p class="centered-title">
-            Full stack javascript engineering
+            Services [ javascript engineering ]
         </p>
         <p class="paragraph">
-            I give advices and budgets for free. I can join you in your office or your closest starbucks and discuss about it. 
-            <br> I provide paid services for:
-            <br><br> Static and dynamic (Angular SPAs) websites development.
+            The truth is that all full stack developers are either front-end oriented or back-end oriented.
+            <br> <b>I'm back-end oriented</b>.<br>
+
+            <br> If you are starting from zero, I always recommend the MVP approach:
+            <br><a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Minimum viable product (MVP)</a>.
+
+            <br><br> At the present, <b>I'm specialized in</b>
+            <br><br> <b>Web application / APIs development (Angular version 1 / NodeJs).</b>
             <br><br> &nbsp;&nbsp;Including:
-            <br>&nbsp;&nbsp;&nbsp; Frontend design (mockups)
+            <br>&nbsp;&nbsp;&nbsp; Frontend design (<b>Mockups</b>)
             <br>&nbsp;&nbsp;&nbsp; Frontend htmlfy (psd to html)
             <br>&nbsp;&nbsp;&nbsp; Database engineering
+            <br>&nbsp;&nbsp;&nbsp; <b>Modular Programming </b>
             <br>&nbsp;&nbsp;&nbsp; Version control (Git)
             <br>&nbsp;&nbsp;&nbsp; Token authentication
             <br>&nbsp;&nbsp;&nbsp; Integration with mailing frameworks such as Mailgun or Mailchimp.
             <br>&nbsp;&nbsp;&nbsp; Integration of payments systems such as Stripe or Lemonway.
-            <br>&nbsp;&nbsp;&nbsp; SEO and google indexing techniques, angular spa crawling.
-            <br>&nbsp;&nbsp;&nbsp; Performance take care (asset bundling)
-            <br>&nbsp;&nbsp;&nbsp; Deployments to PaaS, private VPNs with continuous integration.
-            
-            <br><br> At the same time, I use different tools to take care of project management and stay 100% in tune with you. For example, I manage tasks tracking and support tickets using lean management tools such as Trello, Kanbanflow or your JIRA tools. I communicate using Slack, Trello, classic email and even whatsapp. I'm right there when you need me.
-            
-            <br><br> I open to listen other requirements as well.
+            <br>&nbsp;&nbsp;&nbsp; <b>SEO</b> and google indexing techniques, angular spa crawling.
+            <br>&nbsp;&nbsp;&nbsp; <b>Performance</b> take care (asset bundling)
+            <br>&nbsp;&nbsp;&nbsp; Deployments to PaaS, private VPNs with <b>continuous integration</b>.
+
+            <br><br> <b>I normally do not provide these services</b> but we can still discuss it:<br>
+            <br> Web application / APIs development (Ruby on rails).
+            <br> Web application / APIs development (PHP Laravel 5.4).
+            <br> Mobile Hybrid development (Ionic framework version 1 / Angular version 1).
+            <br> Mobile Hybrid development (Ionic framework version 2 / Angular version 2).
+            <br> Mobile Hybrid development (React Native).
+            <br> Mobile Native development (Android Studio / xcode / Cocos2D / Unity3D).
+
+            <br><br> At the same time, I use different tools to take care of project management and stay 100% in tune with you. For example, I manage tasks tracking and support tickets using lean management tools such as Trello, Kanbanflow or your JIRA
+            tools. I communicate using Slack, Trello, classic email and even whatsapp. I'm right there when you need me.
 
 
+            <br><br> Contact me and <b>get your project estimate !.</b>
         </p>
     </div>
 
