ba-xxx-social-icons-padding

--- a/src/ba/static/online-projects/index.online-projects.html
+++ b/src/ba/static/online-projects/index.online-projects.html
@@ -15,10 +15,11 @@
             </p>
             <p class="paragraph-layout">
                 <a href="https://www.linkedin.com/company/10985007?trk=vsrp_companies_cluster_name&trkInfo=VSRPsearchId%3A1095097121486391558940%2CVSRPtargetId%3A10985007%2CVSRPcmpt%3Acompanies_cluster" target="_blank">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;Linkedin page
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;More
                 </a>
-                <a href="https://www.diagnostical.fr" target="_blank">
-                    <i class="fa fa-home" aria-hidden="true"></i>&nbsp;Diagnostical homepage
+                <br>
+                <a href="https://www.diagnostical.fr" target="_blank" >
+                    <i class="fa fa-home" aria-hidden="true"></i>&nbsp;Visit
                 </a>
             </p>
         </div>
