ba-xxx-grammar-fix

--- a/src/ba/static/about-javier-arancibia-and-misitioba/index.about-javier-arancibia-and-misitioba.html
+++ b/src/ba/static/about-javier-arancibia-and-misitioba/index.about-javier-arancibia-and-misitioba.html
@@ -14,7 +14,7 @@
             were I did networking and I started working for a private investor doing an Angular SPA related to house inspections. 
             <br><br>
             For 2017, I did a fresh start, still around France, were I’m coding a social platform about free food events along my business developer
-            parner and wife.
+            partner and wife.
 
         </p>
     </div>
