--- a/src/client/ba/static/index.homepage.html
+++ b/src/client/ba/static/index.homepage.html
@@ -26,6 +26,12 @@
                 <p><a href="/our-technology-stack">Technology</a></p>
             </li>
 
+            <li class="home-menu__item">
+                <p>arancibiajav@gmail.com</p>
+                <p>+34657332606</p>
+                <p>+33782809054</p>
+            </li>
+
             <!--
             <li class="home-menu__item">
                 <p><a href="#">Gallery</a></p>
