--- a/src/client/ba/static/online-projects/index.online-projects.html
+++ b/src/client/ba/static/online-projects/index.online-projects.html
@@ -1,11 +1,9 @@
 {{> top}}
 <div class="row">
     <div class="col-lg-12">
-        <a href="/" class="header__brand visible-xs-block visible-sm-block">
-            <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
-        </a>
-        <h1 class="centered-title">Online projects, production projects, portfolio, work</h1>
-
+        <div class="panel panel-sm panel-stack">
+            <h1 class="centered-title">Online projects, production projects, portfolio, work</h1>
+        </div>
         <div class="panel">
             <h2 class="left-subtitle">Diagnostical.fr</h2>
             <p class="paragraph">
@@ -18,7 +16,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;More
                 </a>
                 <br>
-                <a href="https://www.diagnostical.fr" target="_blank" >
+                <a href="https://www.diagnostical.fr" target="_blank">
                     <i class="fa fa-home" aria-hidden="true"></i>&nbsp;Visit
                 </a>
             </p>
