--- a/src/client/ba/static/index.html
+++ b/src/client/ba/static/index.html
@@ -25,6 +25,9 @@
             <li class="home-menu__item">
                 <p><a href="/our-technology-stack">Technology</a></p>
             </li>
+            <li class="home-menu__item">
+                <p><a href="/client">Client Login</a></p>
+            </li>
 
             <li class="home-menu__item">
                 <p>arancibiajav@gmail.com</p>
