--- a/src/client/ba/static/index.html
+++ b/src/client/ba/static/index.html
@@ -25,7 +25,7 @@
             <li class="home-menu__item">
                 <p><a href="/our-technology-stack">Technology</a></p>
             </li>
-            <li class="home-menu__item">
+            <li class="home-menu__item home-menu__item-client-login">
                 <p><a href="/client">Client Login</a></p>
             </li>
 
