BA#overall-css-changes

--- a/src/client/ba/static/online-projects.html
+++ b/src/client/ba/static/online-projects.html
@@ -1,18 +1,18 @@
 {{> top}}
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-sm panel-stack">
-            <h1 class="centered-title">Online projects, production projects, portfolio, work</h1>
-        </div>
-        <div class="panel">
-            <a href="https://www.diagnostical.fr" target="_blank">
-            <h2 class="left-subtitle">Diagnostical.fr</h2>
+
+        <h1 class="centered-title">Online projects, production projects, portfolio, work</h1>
+        <div class="panel-rt1">
+            <a class="panel-rt1" href="https://www.diagnostical.fr" target="_blank">
+                <h2 class="panel-rt1">Diagnostical.fr</h2>
             </a>
-            <p class="paragraph">
+            <p class="panel-rt1 justify">
                 Diagnostical is a home inspection booking platform, already implemented in many departments (50 independent certified inspectors in metropolitan France). Founded by an inspector and a web entrepreneur, this startup tends to literally revolutionize the
                 profession of home inspector by a very simple process : digitization and uberization. If you are a home inspector: Offer your expertise on Diagnostical, and you will gain new customers quickly, regularly and free of charge. If you are
                 the owner: You can access the certified inspector schedules available in your department and at the right price
             </p>
+
         </div>
     </div>
 
