--- a/src/client/ba/static/about-javier-arancibia-and-misitioba.html
+++ b/src/client/ba/static/about-javier-arancibia-and-misitioba.html
@@ -1,22 +1,18 @@
 {{> top}}
 <div class="row">
     <div class="col-lg-12">
-       <a href="/" class="header__brand visible-xs-block visible-sm-block">
-        <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
-        </a>
         <p class="centered-title">
             Six years in the software industry, and looking forward.
         </p>
-        <p class="paragraph">
-            I started working in a software factory named Clarity in Buenos Aires, Argentina in 2011 with 21 years. After three years and several trips I realize I wanted to do some entrepreneurship. So I join Quadramma, a young Digital Agency also in Buenos Aires.
-            <br><br>
-            Since then, I specialized in javascript fullstack technologies and web development. I started with MisitioBA in 2015 and I made a bunch of websites for argentinean clients. I wanted to expand my influence circle so I moved to France in 2016
-            were I did networking and I started working for a private investor doing an Angular SPA related to house inspections. 
-            <br><br>
-            For 2017, I did a fresh start, still around France, were I’m coding a social platform about free food events along my business developer
-            partner and wife.
+        <div class="panel-rt1">
+            <p class="panel-rt1">
+                I started working in a software factory named Clarity in Buenos Aires, Argentina in 2011 with 21 years. After three years and several trips I realize I wanted to do some entrepreneurship. So I join Quadramma, a young Digital Agency also in Buenos Aires.
+                <br><br> Since then, I specialized in javascript fullstack technologies and web development. I started with MisitioBA in 2015 and I made a bunch of websites for argentinean clients. I wanted to expand my influence circle so I moved to
+                France in 2016 were I did networking and I started working for a private investor doing an Angular SPA related to house inspections.
+                <br><br> For 2017, I did a fresh start, still around France, were I’m coding a social platform about free food events along my business developer partner and wife.
 
-        </p>
+            </p>
+        </div>
     </div>
 
 </div>
