--- a/src/client/ba/static/index.html
+++ b/src/client/ba/static/index.html
@@ -10,7 +10,7 @@
         <ul class="home-menu">
             <li class="home-menu__item">
                 <a href="/" class="header__brand">
-                    <img class="big-centered-logo center-block" src="/img/ba-logo-round.png" />
+                    <img class="big-centered-logo" src="/img/ba-logo-round.png" />
                 </a>
             </li>
             <li class="home-menu__item">
@@ -26,7 +26,7 @@
                 <p><a href="/our-technology-stack">Technology</a></p>
             </li>
             <li class="home-menu__item home-menu__item-client-login">
-                <p><a href="/client">Client Login</a></p>
+                <p><a href="/clients">Client Login</a></p>
             </li>
 
             <li class="home-menu__item">
