BA#Update-bg-video

--- a/src/client/ba/static/online-projects.html
+++ b/src/client/ba/static/online-projects.html
@@ -2,16 +2,34 @@
 <div class="row">
     <div class="col-lg-12">
 
-        <h1 class="centered-title">Online projects, production projects, portfolio, work</h1>
+        <h1 class="centered-title">Online projects</h1>
         <div class="panel-rt1">
             <a class="panel-rt1" href="https://www.diagnostical.fr" target="_blank">
                 <h2 class="panel-rt1">Diagnostical.fr</h2>
             </a>
+            <img class='img-responsive center-block' src="/img/diagnostical-page.jpeg">
             <p class="panel-rt1 justify">
                 Diagnostical is a home inspection booking platform, already implemented in many departments (50 independent certified inspectors in metropolitan France). Founded by an inspector and a web entrepreneur, this startup tends to literally revolutionize the
                 profession of home inspector by a very simple process : digitization and uberization. If you are a home inspector: Offer your expertise on Diagnostical, and you will gain new customers quickly, regularly and free of charge. If you are
                 the owner: You can access the certified inspector schedules available in your department and at the right price
             </p>
+            
+             <a class="panel-rt1" href="https://www.gasport.es" target="_blank">
+                <h2 class="panel-rt1">Gasport.es</h2>
+            </a>
+            <img class='img-responsive center-block' src="/img/gasport-page.jpeg">
+            <p class="panel-rt1 justify">
+                Gasport App S.L. es una empresa española de reciente creación y residente en Mataró. Nuestra misión es facilitar el repostaje de carburante económico de forma rápida y cómoda.
+            </p>
+            
+             <a class="panel-rt1" href="https://www.endigames.com" target="_blank">
+                <h2 class="panel-rt1">Endigames.com</h2>
+            </a>
+            <img class='img-responsive center-block' src="/img/endigames-page.jpeg">
+            <p class="panel-rt1 justify">
+                Endigames es un proyecto argentino union entre Quadramma y Amblagar. La misión es facilitar el outsourcing de videojuegos desde el hemisferio sur.
+            </p>
+
 
         </div>
     </div>
