--- a/src/client/ba/static/our-technology-stack.html
+++ b/src/client/ba/static/our-technology-stack.html
@@ -7,84 +7,58 @@
         </p>
         <div class="panel-rt1">
             <p class="panel-rt1">
-                I use a custom fullstack boilerplate to bootstrap any kind of project. <br>Is composed by MongoDB, ExpressJs, Angular and NodeJs.
+                I use a fullstack boilerplate for fast bootstraping. <br>Is composed by MongoDB, ExpressJs, Angular and NodeJs.
             </p>
             <p class="panel-rt1">
-                <b>The boilerplate</b>
+                <b>The boilerplate</b> uses static generation tools techniques ensuring frontend projects detached from any server side technology.
             </p>
             <p class="panel-rt1">
-                It uses static generation tools techniques ensuring frontend projects detached from any server side technology.
+                It is already integrated with backend capabilities for APIs creation.
             </p>
-            <p class="panel-rt1">
-                It is already integrated with a backend boilerplate for APIs creation with helps to reduce development time drastically.
-            </p>
-            <p class="panel-rt1">
-                Some features:
-            </p>
+            <h3>Features</h3>
             <ul class="panel-rt1">
                 <li>
-                    Frontend Asset bundling (NodeJS, made from the scratch).
+                    Frontend Asset bundling.
                 </li>
                 <li>
-                    Frontend Javascript ES6 to ES5 transpiler (Babel)
+                   ES6 to ES5 transpiler (Babel / Rollup)
                 </li>
                 <li>
-                    Frontend Static generator capabilities made from the scratch. Damn fast.
+                    Static generation capabilities
                 </li>
                 <li>
-                    Frontend Static Templating (HandlebarsJS)
+                    Client / Server templating (HandlebarsJS)
                 </li>
                 <li>
-                    Frontend Fast Live sync developement (Firebase, made from the scratch)
+                    Blazing fast live sync development powered by firebase
                 </li>
                 <li>
-                    Frontend Live sync css injection made from the scratch.
+                    Angular 1 HTML5 routing workflow
                 </li>
                 <li>
-                    Frontend CSS Live update from Chrome Dev console (faster developement times!)
+                    Smart developement processes powered by nodemon
                 </li>
                 <li>
-                    Frontend I18N workflow
+                    HTML Mailing powered by mailgun
                 </li>
                 <li>
-                    Frontend Angular 1 HTML5 routing workflow
+                    Buil-in controllers / models system on top of mongoose
                 </li>
                 <li>
-                    Frontend developement dosen't crash (Nodemon)
+                    Token authentication workflow
                 </li>
                 <li>
-                    Backend Notifications workflow (mailing)
-                </li>
-                <li>
-                    Backend mailing templating (100% compatible HTML technique)
-                </li>
-                <li>
-                    Backend controllers (faster apis developement)
-                </li>
-                <li>
-                    Backend MongoDB + Mongoose + Extra layer
-                </li>
-                <li>
-                    Backend Token authentication workflow
-                </li>
-                <li>
-                    Backend automatic tasks workflow
+                    Automatic tasks workflow
                 </li>
                 <li>
                     Backend Shell, File and Database Logging tool with different verbosity levels
                 </li>
-                <li>
-                    Backend developement autoreload (Nodemon)
-                </li>
-                <li>
-                    and ...
-                </li>
             </ul>
             <p class="panel-rt1">
-                long live to open source ! <a href="https://github.com/javimosch/bastack" target="_blank">https://github.com/javimosch/bastack</a>
+                Its open source and hosted at <a href="https://github.com/javimosch/bastack" target="_blank">Github</a>
             </p>
-
-            </p>
+            
+           
         </div>
     </div>
 
