--- a/src/client/ba/static/services.html
+++ b/src/client/ba/static/services.html
@@ -5,59 +5,82 @@
             Engineering services
         </p>
         <div class="panel-rt1">
-            <p class="panel-rt1">
-                At the present, <b>I'm specialized in</b>
-            </p>
-            <p class="panel-rt1">
-                Fullstack web applications with Angular v1, NodeJS and MongoDB.
-
-            </p>
-            <p class="panel-rt1">
-                Features:
-            </p>
+            <h3>Current services</h3>
+            <ul class="panel-rt1">
+                <li>Fullstack web applications with Angular v1, NodeJS and MongoDB (STABLE MARKET TECH)</li>
+                <li>Progressive web applications with PREACT (BLEDING EDGE, NON-STABLE TECH)</li>
+            </ul>
+            <h3>Features</h3>
             <ul class="panel-rt1">
                 <li>
-                    Frontend design (<b>Mockups</b>)
+                    Frontend design mockups.
                 </li>
-                <li>Frontend htmlfy (psd to html) Database engineering
-                </li>
-                <li>
-                    <b>Modular Programming </b> Version control (Git) Token authentication Integration with mailing frameworks such as Mailgun or Mailchimp. Integration of payments systems such as Stripe or Lemonway.
+                <li>Frontend htmlfy (psd to html).
                 </li>
                 <li>
-                    <b>SEO</b> and google indexing techniques, angular spa crawling.
+                    Database engineering.
                 </li>
-                <li><b>Performance</b> take care (asset bundling) Deployments to PaaS, private VPNs with <b>continuous integration</b>.
+                <li> Version control (Git).</li>
+                <li>
+                    Business logic programming: Any feature (reasonable), Any provider integration.
+                </li>
+                <li>
+                    SEO and google indexing techniques, angular spa crawling.
+                </li>
+                <li>Performance take care (asset bundling).
+                </li>
+                <li>
+                    Deployments to PaaS, private VPNs with continuous integration.
                 </li>
             </ul>
-            <p class="panel-rt1">
-                I normally do not provide these services</b> but we can still discuss it:
-            </p>
+
+            <h3>Full list of technologies I can perform if needed</h3>
             <ul class="panel-rt1">
                 <li>
-                    Web application / APIs development (Ruby on rails).
+                    HTML5 / CSS3
                 </li>
                 <li>
-                    Web application / APIs development (PHP Laravel 5.4).
+                    JAVASCRIPT ES5 / ES6
                 </li>
                 <li>
-                    Mobile Hybrid development (Ionic framework version 1 / Angular version 1).
+                    JAVA
                 </li>
                 <li>
-                    Mobile Hybrid development (Ionic framework version 2 / Angular version 2).
+                    C / C++ / C# / C# .NET
                 </li>
                 <li>
-                    Mobile Hybrid development (React Native). Mobile Native development (Android Studio / xcode / Cocos2D / Unity3D).
+                    PHP 7 (LARAVEL)
+                </li>
+                <li>
+                    PYTHON
+                </li>
+                <li>
+                    RUBY (RAILS)
+                </li>
+                <li>
+                    ASP Classic, ASP .NET
+                </li>
+                <li>
+                    FLASH AC3
                 </li>
             </ul>
+
+            <h3>Contract types</h3>
+            <ul>
+                <li>Hourly rate</li>
+                <li>Daily rate</li>
+                <li>Feature rate</li>
+                <li>Sprint rate</li>
+                <li>Project fixed rate</li>
+            </ul>
+
             <p class="panel-rt1">
-                <br><br> At the same time, I use different tools to take care of project management and stay 100% in tune with you. For example, I manage tasks tracking and support tickets using lean management tools such as Trello, Kanbanflow or your
-                JIRA tools. I communicate using Slack, Trello, classic email and even whatsapp. I'm right there when you need me.
+                I use different tools to stay 100% in tune with you. For example, I manage tasks using lean management tools such as Trello, Kanbanflow or your preferred tools. I can communicate using Slack, Trello, classic email and even whatsapp. I'm right there when
+                you need me.
 
-                <br> If you are starting from zero, I always recommend the MVP approach:
-                <br><a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Minimum viable product (MVP)</a>.
-
-                <br><br> Contact me and <b>get your project estimate !.</b>
+            </p>
+            <p class="panel-rt1">
+                Contact me to get your project estimate or any other information.
             </p>
         </div>
     </div>
