BA#Mobile fixes

--- a/src/client/ba/static/about-misitioba.html
+++ b/src/client/ba/static/about-misitioba.html
@@ -1,56 +1,39 @@
 {{> top}}
 <div class="row">
-    <div class="col-lg-12">
-        <p class="centered-title">
-            MisitioBA is a Personal Digital Brand
-        </p>
+    <div class="col-lg-5 col-lg-offset-7">
+        <div class="container visible-xs-block">
+            <a href="/" class="back-btn">
+            BACK
+            </a>
+        </div>
+        <h1 class="centered-title">About</h1>
         <div class="panel-rt1">
-            <i>
+            <p class="italic-centered-text">
                 MisitioBA is created in 2015 after investing five years in the software industry working inside IT outsourcing companies in Argentina.
-            </i>
-            <h3>Cronology</h3>
-            <ul>
-                
-                <li>
-                    In 2016, after conclude several small projects we move to Paris to develop Diagnostical.fr     
-                </li>
-                <li>
-                    In Q4 2016, I helped with the development of Shopmycourses, a web platform and mobile app similar to Deliberry from Spain.
-                </li>
-                <li>
-                    in Q1 2017, We partially coded a social platform about free food events along my business developer partner and wife and We also pitching for another project related to collaborative logistic networks in Paris.
-                </li>
-                <li>
-                    In 2017, we move to Barcelona to participate in the development of Gasport in Barcelona Activa incubator.
-                </li>
-                <li>
-                    Late in 2017, I started to support an startup inside Station F, Paris. With the bless from Macron!
-                </li>
-            </ul>
-
-            <h3>Mission</h3>
-            <p class="panel-rt1">
-                To provide web development to private investors and young startups and to create real value for people.
             </p>
-            <h3>Values</h3>
-            <p class="panel-rt1">
-                Honesty-humility in the relation with our clients, as well as full-transparency.
-            </p>
-            <h3>Vision</h3>
-            <p class="panel-rt1">
-                A world with decentralised power, with a lot of small enterprises working on green projects and doing networking between. A collaborative enviroment where freelancers were the foundations.
-            </p>
-
-            <h3>Team</h3>
-            <ul>
+            <a href="/cronology"><h3>Projects cronology</h3></a>
+            <a href="/mission-values-vision"><h3>
+        What is truly about</h3></a>
+           
+            <h3>Participation</h3>
+            <ul class="unstyled-list">
                 <li>
-                    <a href="https://www.linkedin.com/in/arancibiajav" target="_blank"> Javier Leandro Arancibia</a> <b>Freelancer</b>  (Fullstack Programmer)
+                    <a href="https://www.linkedin.com/in/arancibiajav" target="_blank">Javier Leandro Arancibia</a>
+                    <br>Fullstack Programmer
+                    <br>Freelancer
+                    <br>Advisor
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/ma%C3%ABlle-aubert-771aba109/" target="_blank"> Maelle Alina Aubert</a> <b>Advisor</b> (Business Developer)
+                    <a href="https://www.linkedin.com/in/ma%C3%ABlle-aubert-771aba109/" target="_blank"> Maelle Alina Aubert</a>
+                    <br>Business Developer
+                    <br>Freelancer
+                    <br>Advisor
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/richard-gentilella-57260a5a/" target="_blank"> Richard Gentilella</a> <b>Advisor</b> (Product Designer)
+                    <a href="https://www.linkedin.com/in/richard-gentilella-57260a5a/" target="_blank"> Richard Gentilella</a>
+                    <br>Product Designer
+                    <br>Freelancer
+                    <br>Advisor
                 </li>
             </ul>
 
