--- a/src/client/ba/static/services.html
+++ b/src/client/ba/static/services.html
@@ -7,10 +7,11 @@
         <div class="panel-rt1">
             <h3>Current services</h3>
             <ul class="panel-rt1">
-                <li>Fullstack web applications with Angular v1, NodeJS and MongoDB (STABLE MARKET TECH)</li>
-                <li>Progressive web applications with PREACT (BLEDING EDGE, NON-STABLE TECH)</li>
+                <li>Fullstack web applications with Angular v1, NodeJS and MongoDB (stable and solid tech) <b>new projects</b></li>
+                <li>Progressive web applications with PREACT (bleding edge tech) <b>new projects</b></li>
+                <li>Feature oriented programming with any javascript technology / framework <b>existing projects</b></li>
             </ul>
-            <h3>Features</h3>
+            <h3>Features for new projects</h3>
             <ul class="panel-rt1">
                 <li>
                     Frontend design mockups.
@@ -75,12 +76,11 @@
             </ul>
 
             <p class="panel-rt1">
-                I use different tools to stay 100% in tune with you. For example, I manage tasks using lean management tools such as Trello, Kanbanflow or your preferred tools. I can communicate using Slack, Trello, classic email and even whatsapp. I'm right there when
-                you need me.
+                We use different tools to stay 100% in tune with the client. For example, We manage tasks using lean management tools such as Trello, Kanbanflow or your preferred tools. We communicate using Slack, Trello, classic email and even whatsapp. We are right there when client needs us.
 
             </p>
             <p class="panel-rt1">
-                Contact me to get your project estimate or any other information.
+                Contact Javier Leandro Arancibia to get your project estimate or any other information.
             </p>
         </div>
     </div>
